// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Context Filter ActiveWorkContextFilter smoke-test 1`] = `
<div class="css-175oi2r r-78d8zt r-18u37iz r-1w6e6rj r-13qz1uu"
     data-testid="work-context-filter"
>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Inbox
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-175oi2r r-1kihuf0 r-tuq35u r-1m04atk r-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Urgent
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Quick Fixes
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Up Next
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Work
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Shopping
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Chalk Planning
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-16y2uox">
  </div>
  <div dir="auto"
       class="css-146c3p1 r-1pyaxff"
  >
    <div class="css-175oi2r r-xoduu5 r-1udh08x r-crgep1 r-105ug2t"
         data-testid="show-labels-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-175oi2r r-xoduu5 r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
              data-testid="show-labels"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-1jxf684 r-1niwhzg r-lrvibr r-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󱋷
        </span>
      </button>
    </div>
    <div class="css-175oi2r r-xoduu5 r-1udh08x r-crgep1 r-105ug2t"
         data-testid="show-completed-todos-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-175oi2r r-xoduu5 r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
              data-testid="show-completed-todos"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-1jxf684 r-1niwhzg r-lrvibr r-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󰄱
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Work Context Filter DefaultWorkContextFilter smoke-test 1`] = `
<div class="css-175oi2r r-78d8zt r-18u37iz r-1w6e6rj r-13qz1uu"
     data-testid="work-context-filter"
>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Inbox
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Urgent
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Quick Fixes
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Up Next
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Work
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Shopping
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-78d8zt r-1bq2mok r-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-15zivkp r-1jkjb r-1kb76zh r-14gqq1x r-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Chalk Planning
        </div>
      </div>
    </button>
  </div>
  <div class="css-175oi2r r-16y2uox">
  </div>
  <div dir="auto"
       class="css-146c3p1 r-1pyaxff"
  >
    <div class="css-175oi2r r-xoduu5 r-1udh08x r-crgep1 r-105ug2t"
         data-testid="show-labels-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-175oi2r r-xoduu5 r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
              data-testid="show-labels"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-1jxf684 r-1niwhzg r-lrvibr r-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󱋷
        </span>
      </button>
    </div>
    <div class="css-175oi2r r-xoduu5 r-1udh08x r-crgep1 r-105ug2t"
         data-testid="show-completed-todos-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-175oi2r r-xoduu5 r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
              data-testid="show-completed-todos"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-1jxf684 r-1niwhzg r-lrvibr r-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󰄱
        </span>
      </button>
    </div>
  </div>
</div>
`;
